--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font: 12px/1.2 Menlo, Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
   text-align: center;
-  background-color: #282c34;
+  line-height: 1.25rem;
+  background-color: #000;
   padding: 2rem;
 }
 
-h1, p, a {
-  color: #4798D6;
+h1 {
+  color: #F6F7A8;
 }
 
-span {
-  color: white;
+p, a {
+  color: #ccc;
 }
 
 a {
   text-decoration: none;
+  color: #85DD7E;
 }
 
 .content {
@@ -22,7 +24,7 @@ a {
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  width: 35%;
+  width: 29%;
   height: 25%;
   margin: 15% auto 0;
 }
